@@ -1,7 +1,7 @@
 Package: Rsamtools
 Type: Package
 Title: Binary alignment (BAM), variant call (BCF), or tabix file import
-Version: 1.13.16
+Version: 1.13.17
 Author: Martin Morgan, Herv\'e Pag\`es
 Maintainer: Bioconductor Package Maintainer <maintainer@bioconductor.org>
 Description: This package provides an interface to the 'samtools',
@@ -9,7 +9,7 @@ Description: This package provides an interface to the 'samtools',
   SAM (Sequence Alignment / Map), binary variant call (BCF) and
   compressed indexed tab-delimited (tabix) files. 
 URL: http://bioconductor.org/packages/release/bioc/html/Rsamtools.html
-License: Artistic-2.0 + file LICENSE
+License: Artistic-2.0 | file LICENSE
 LazyLoad: yes
 Depends: methods, IRanges (>= 1.19.5), GenomicRanges (>= 1.13.9),
          XVector, Biostrings (>= 2.29.2)
