@@ -11,6 +11,9 @@ NEW FEATURES
 
     o add isIncomplete,BamFile-method to test for end-of-file
 
+    o add count.mapped.reads to summarizeOverlaps,BamFileList-method;
+    set to TRUE to collect read and nucleotide counts via countBam.
+
 BUG FIXES
 
     o scanVcfHeader tolerates records without ID fields, and with
